src/objects/dupcheck__dcJob__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__Ended__c</fullName>
        <label>Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dupcheck__ErrorCount__c</fullName>
        <label>Error Count</label>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__HasError__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcJob__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__LastDuplicateAdded__c</fullName>
        <label>Last Duplicate Added</label>
        <summarizedField>dupcheck__dc3Duplicate__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcJob__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__Started__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Started</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dupcheck__apex__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__autoProcessConvertOwner__c</fullName>
        <label>Auto Process Convert Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__autoProcessConvertStatus__c</fullName>
        <label>Auto Process Convert Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__autoProcessThreshold__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Auto Process Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__autoProcessType__c</fullName>
        <label>Auto Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>MERGE</fullName>
                </value>
                <value>
                    <fullName>CONVERT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__avgScore__c</fullName>
        <formula>dupcheck__sumScore__c / dupcheck__groupCounter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__cloudJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Plauti Cloud to execute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__duplicateCount__c</fullName>
        <label>Duplicate Count</label>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcJob__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__errorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__executionCount__c</fullName>
        <description>Number of times a job with a scheduler has run</description>
        <label>Number of times run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__filterMatch__c</fullName>
        <label>filter match</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__filterOn__c</fullName>
        <label>Filter On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>filter</fullName>
                </value>
                <value>
                    <fullName>all</fullName>
                </value>
                <value>
                    <fullName>predefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__filterWith__c</fullName>
        <label>Filter With</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>source</fullName>
                </value>
                <value>
                    <fullName>filter</fullName>
                </value>
                <value>
                    <fullName>all</fullName>
                </value>
                <value>
                    <fullName>predefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__filter__c</fullName>
        <description>Contains the predefined filter</description>
        <label>filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__groupCounter__c</fullName>
        <label>Group Count</label>
        <summaryFilterItems>
            <field>dupcheck__dcGroup__c.dupcheck__duplicateCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dcGroup__c.dupcheck__dcJob__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__groupFilter__c</fullName>
        <description>Contains the filters for filtering on group level for the job</description>
        <label>Group Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__hitLicenseLimit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Hit License Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__initialAvgScore__c</fullName>
        <label>Initial Average Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__initialDuplicateCount__c</fullName>
        <label>Initial Duplicate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__initialGroupCounter__c</fullName>
        <label>Initial Group Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__initialRecordCount__c</fullName>
        <label>Initial Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__lastExecution__c</fullName>
        <label>Last time executed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dupcheck__lowScore__c</fullName>
        <label>Lowest Score</label>
        <summarizedField>dupcheck__dc3Duplicate__c.dupcheck__Score__c</summarizedField>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcJob__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__matchFilter__c</fullName>
        <label>Match Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__matchObject__c</fullName>
        <label>Match Object</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__ownerHistory__c</fullName>
        <label>Owner History</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Job</label>
        <referenceTo>dupcheck__dcJob__c</referenceTo>
        <relationshipLabel>Duplicate Check Jobs</relationshipLabel>
        <relationshipName>parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__processedRecords__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Processed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__recordCount__c</fullName>
        <label>Record Count</label>
        <summarizedField>dupcheck__dcGroup__c.dupcheck__recordCount__c</summarizedField>
        <summaryForeignKey>dupcheck__dcGroup__c.dupcheck__dcJob__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__result__c</fullName>
        <label>Result</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__scenarioData__c</fullName>
        <label>Scenario data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__scenario__c</fullName>
        <label>Scenario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__schedule__c</fullName>
        <label>Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__selectedRecords__c</fullName>
        <label>Selected Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__sourceFilter__c</fullName>
        <label>Source Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__sourceObject__c</fullName>
        <label>Source Object</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__sumScore__c</fullName>
        <label>Sum Score</label>
        <summarizedField>dupcheck__dcGroup__c.dupcheck__avgScore__c</summarizedField>
        <summaryFilterItems>
            <field>dupcheck__dcGroup__c.dupcheck__duplicateCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dcGroup__c.dupcheck__dcJob__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>search</fullName>
                </value>
                <value>
                    <fullName>search-ext</fullName>
                </value>
                <value>
                    <fullName>merge</fullName>
                </value>
                <value>
                    <fullName>convert</fullName>
                </value>
                <value>
                    <fullName>index</fullName>
                </value>
                <value>
                    <fullName>localindex</fullName>
                </value>
                <value>
                    <fullName>unique</fullName>
                </value>
                <value>
                    <fullName>web2lead</fullName>
                </value>
                <value>
                    <fullName>setformerge</fullName>
                </value>
                <value>
                    <fullName>delta</fullName>
                </value>
                <value>
                    <fullName>deltasingle</fullName>
                </value>
                <value>
                    <fullName>direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__uniqueName__c</fullName>
        <label>Unique Name</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dupcheck__workerData__c</fullName>
        <label>External worker data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Duplicate Check Job</label>
    <nameField>
        <displayFormat>JOB{0000}</displayFormat>
        <label>Duplicate Check Job</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>